iOS9 fix canOpenURL method

--- a/ios/PPHere/PPHere-Info.plist
+++ b/ios/PPHere/PPHere-Info.plist
@@ -30,6 +30,10 @@
 	<array>
 		<string>armv7</string>
 	</array>
+	<key>LSApplicationQueriesSchemes</key>
+	<array>
+		<string>paypalhere</string>
+	</array>
 	<key>UISupportedInterfaceOrientations~ipad</key>
 	<array>
 		<string>UIInterfaceOrientationPortrait</string>
